--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 calamine = "0.22.0"
 regex = "1.10"
 actix-web = "4.4.0"
+actix-web-actors = "4.2"
+actix-rt = "2.9"
+actix = "0.13.1"
+tokio = "1.33.0"
+serde = { version = "1.0.89", features = ["derive"] } 
+serde_json = "1.0"
