--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ actix = "0.13.1"
 tokio = "1.33.0"
 serde = { version = "1.0.89", features = ["derive"] } 
 serde_json = "1.0"
-
+priority-queue = "1.3.2"
