--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ tokio = "1.33.0"
 serde = { version = "1.0.89", features = ["derive"] } 
 serde_json = "1.0"
 priority-queue = "1.3.2"
+tracing = "0.1.4"
+tracing-subscriber = "0.3.17"
