--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ serde_json = "1.0"
 priority-queue = "1.3.2"
 tracing = "0.1.4"
 tracing-subscriber = "0.3.17"
-
+csv = "1.3.0"
+xlsxwriter = "0.6.0"
