--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+quickcheck = "1.0"
+
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
@@ -18,6 +21,7 @@ serde = { version = "1.0.89", features = ["derive"] }
 serde_json = "1.0"
 priority-queue = "1.3.2"
 tracing = "0.1.4"
-tracing-subscriber = "0.3.17"
+tracing-subscriber = { version = "0.3.17", features = ["json"] }
+tracing-appender = "0.2.3"
 csv = "1.3.0"
 xlsxwriter = "0.6.0"
