test: added tests and refactoring to SchedulerAgent and scheduler message system

--- a/elk_config/logstash_config/logstash.conf
+++ b/elk_config/logstash_config/logstash.conf
@@ -1,29 +1,3 @@
-# input { 
-#     stdin { } 
-
-#     file {
-#     path => "C:\Users\s174460\Coding\Projects\ordinator\logs\test_input_json.log"
-#     start_position => "beginning"
-    
-#     # Setting sincedb_path to NUL (Windows equivalent of /dev/null)
-#     # Note: Only use this for testing, as it will read files from the beginning every time.
-#     sincedb_path => "NUL"
-
-#     # Codec - Adjust if you have a specific log format (e.g., JSON)
-#     codec => "json"
-#   }
-# }
-
-# output {
-#     file {
-#       path => "C:\\Users\\s174460\\Coding\\Projects\\ordinator\\logs\\output_test.log"
-#     }
-#     elasticsearch {
-#       hosts => ["localhost:9200"]
-#     }
-#     stdout { codec => rubydebug }
-# }
- 
 input {
   	file {
 		path => "${LOG_FILE_PATH}/ordinator.log.*"
@@ -45,9 +19,7 @@ filter {
 			"host.name",
 			"level",
 			"event.original",
-			"filename",
-			"log.file.path"
-			
+			"log.file.path",
 		]
 	}
 }
