--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
 tracing-appender = "0.2"
 csv = "1.3"
+jlrs = {version = "0.19.2", features = ["async-std-rt", "julia-1-9"]}
+lazy_static = "1.4.0"  # Use the latest version available
+
