--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+criterion = "0.5"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
@@ -22,6 +24,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
 tracing-appender = "0.2"
 csv = "1.3"
-jlrs = {version = "0.19.2", features = ["async-std-rt", "julia-1-9"]}
+# jlrs = {version = "0.19.2", features = ["async-std-rt", "julia-1-9"]}
 lazy_static = "1.4.0"  # Use the latest version available
+cargo-watch = "8.4.1"
 
