--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - log_volume:/usr/src/ordinator/logs
     environment:
       - CONFIG_PATH=/usr/src/ordinator/parameters/work_order_weight_parameters.json
+      - CRITERION_PATH=/usr/src/ordinator/benches/benchmark_test.rs
       - LOG_DIR=/usr/src/ordinator/logs
   elasticsearch:
     image: elasticsearch:8.11.1
