--- a/.github/workflows/rust_test.yml
+++ b/.github/workflows/rust_test.yml
@@ -1,7 +1,6 @@
 name: Rust Test
 
 on:
-  push:
   pull_request:
     branches: [ main ]
 
@@ -19,3 +18,13 @@ jobs:
         override: true
     - name: Run tests
       run: cargo test --verbose
+    - name: Run clippy
+      run: cargo clippy --verbose
+    - name: Install cargo-audit
+      run: cargo install cargo-audit
+    - name: Audit 
+      run: cargo audit
+    - name: Tarpaulin Install
+      run: cargo install cargo-tarpaulin
+    - name: tarpaulin coverage
+      run: cargo tarpaulin --out Xml
