feat: dev-container added | cargo watch | tests for actor messages

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,10 +1,9 @@
 # Stage 1: Build the application
 FROM rust:latest as builder
+RUN cargo install cargo-watch
 WORKDIR /usr/src/ordinator
-
-COPY Cargo.toml Cargo.lock ./
-
-RUN mkdir src && echo "fn main() {format!({}, file!())}" > src/main.rs
+# COPY Cargo.toml Cargo.lock ./
+# RUN mkdir src && echo "fn main() {format!({}, file!())}" > src/main.rs
 
 RUN cargo build --release
 
@@ -22,8 +21,6 @@ COPY --from=builder /usr/local/cargo/bin/ordinator /usr/local/bin/ordinator
 COPY test_data/export_test.XLSX /usr/src/ordinator/test_data/export_test.XLSX
 COPY parameters/work_order_weight_parameters.json /usr/src/ordinator/parameters/work_order_weight_parameters.json
 COPY parameters/work_order_weight_parameters.json /usr/src/ordinator/parameters/work_order_weight_parameters.json
-COPY benches/benchmark_test.rs /usr/src/ordinator/benches/benchmark_test.rs
-COPY benches/perf.rs /usr/src/ordinator/benches/perf.rs
 
-# CMD ["cargo", "bench"]
+#CMD ["cargo", "watch", "-x", "run"]
 CMD ["ordinator"]
