--- a/elk_config/logstash_config/logstash.conf
+++ b/elk_config/logstash_config/logstash.conf
@@ -8,6 +8,11 @@ input {
 }
 
 filter {
+
+	json {
+    	source => "message"
+    	target => "parsed_message"  # Nest the parsed JSON under 'parsed_message'
+  	}
 	mutate {
 		remove_field => [
 			"@version", 
