--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,18 @@ version: '3'
 
 services:
   rust-backend:
-    image: ordinator-image
+    image: ordinator-image-prod
     ports:
       - "8001:8001"
-    command: ["ordinator", "/usr/src/ordinator/test_data/export_test.XLSX"]
-    depends_on:
-      - elasticsearch
     volumes:
       - log_volume:/usr/src/ordinator/logs
     environment:
       - CONFIG_PATH=/usr/src/ordinator/parameters/work_order_weight_parameters.json
       - CRITERION_PATH=/usr/src/ordinator/benches/benchmark_test.rs
       - LOG_DIR=/usr/src/ordinator/logs
+    depends_on:
+      - elasticsearch
+    command: ["ordinator", "/usr/src/ordinator/test_data/export_test.XLSX"]
   elasticsearch:
     image: elasticsearch:8.11.1
     # environment:
@@ -23,7 +23,6 @@ services:
       - esdata:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
-
   logstash:
     image: logstash:8.11.1
     volumes:
@@ -36,17 +35,12 @@ services:
     environment:
       - LOG_FILE_PATH=/usr/share/logstash/logs/
       - LOG_CONF_PATH=/usr/share/logstash/config/logstash.conf
-    # command: >
-    #    bash -c "mkdir -p /usr/share/logstash/logs &&
-    #            chown logstash:logstash /usr/share/logstash/logs &&
-    #            chmod 755 /usr/share/logstash/logs"
   kibana:
     image: kibana:8.11.1
     ports:
       - "5601:5601"
     depends_on:
       - elasticsearch
-
 volumes:
   esdata:
   log_volume:
