--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,13 @@ criterion = "0.5"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
-calamine = "0.22.0"
+calamine = "0"
 regex = "1.10"
 actix-web = "4.4.0"
 actix-web-actors = "4.2"
 actix-rt = "2.9"
 actix = "0.13.1"
-tokio = "1.34.0"
+tokio = "1"
 serde = { version = "1.0", features = ["derive"] } 
 serde_json = "1.0"
 priority-queue = "1.3"
@@ -24,7 +24,6 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
 tracing-appender = "0.2"
 csv = "1.3"
-# jlrs = {version = "0.19.2", features = ["async-std-rt", "julia-1-9"]}
-lazy_static = "1.4.0"  # Use the latest version available
-cargo-watch = "8.4.1"
+lazy_static = "1.4.0" 
+rand = "0.8"
 
