period generation centrallization

--- a/elk_config/logstash_config/logstash.conf
+++ b/elk_config/logstash_config/logstash.conf
@@ -8,20 +8,20 @@ input {
 }
 
 filter {
-	mutate {
-		remove_field => [
-			"@version", 
-			"@version.keyword", 
-			"log.file.path.keyword",
-			"filename",
-			"fields.period",
-			"fields.work_order_number",
-			"host.name",
-			"level",
-			"event.original",
-			"log.file.path"
-		]
-	}
+	# mutate {
+	# 	remove_field => [
+	# 		"@version", 
+	# 		"@version.keyword", 
+	# 		"log.file.path.keyword",
+	# 		"filename",
+	# 		"fields.period",
+	# 		"fields.work_order_number",
+	# 		"host.name",
+	# 		"level",
+	# 		"event.original",
+	# 		"log.file.path"
+	# 	]
+	# }
 }
 
 output {
