--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,6 @@
-[package]
-name = "ordinator"
-version = "0.1.0"
-edition = "2021"
-
-[profile.release]
-debug = 1
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dev-dependencies]
-criterion = "0.5"
-
-[dependencies]
-chrono = { version = "0.4", features = ["serde"] }
-calamine = "0"
-regex = "1.10"
-actix-web = "4.4.0"
-actix-web-actors = "4.2"
-actix-rt = "2.9"
-actix = "0.13.1"
-tokio = "1"
-serde = { version = "1.0", features = ["derive"] } 
-serde_json = "1.0"
-priority-queue = "1.3"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["json"] }
-tracing-appender = "0.2"
-csv = "1.3"
-lazy_static = "1.4.0" 
-rand = "0.8"
-strum = "0"
-strum_macros = "0"
-clap = { version = "4", features = ["derive"] }
+[workspace]
+members = [
+    "scheduling_system",
+    "shared_messages",
+    "cli_tool"
+]
