--- a/cli_tool/Cargo.toml
+++ b/cli_tool/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+shared_messages = { path = "../shared_messages" }
 clap = { version = "4", features = ["derive"] }
 tungstenite = "0"
 url = "2"
+serde_json = "1"
