--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -24,11 +24,12 @@ tokio = "1"
 serde = { version = "1.0", features = ["derive"] } 
 serde_json = "1.0"
 priority-queue = "1.3"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["json"] }
+tracing = { version = "0.1" }
+tracing-subscriber = { version = "0", features = ["json"] }
 tracing-appender = "0.2"
 csv = "1.3"
 lazy_static = "1.4.0" 
 rand = "0.8"
 strum = "0"
 strum_macros = "0"
+tracing-flame = "0.2"
