--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -14,6 +14,7 @@ criterion = "0.5"
 [dependencies]
 shared_messages = { path = "../shared_messages" }
 chrono = { version = "0.4", features = ["serde"] }
+chrono-tz = "0"
 calamine = "0"
 regex = "1.10"
 actix-web = "4.4.0"
