--- a/.github/workflows/rust_test.yml
+++ b/.github/workflows/rust_test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
+          profile: complete
           toolchain: stable
           override: true
       - name: Run tests
