--- a/.github/workflows/rust_test.yml
+++ b/.github/workflows/rust_test.yml
@@ -13,18 +13,19 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
+          profile: complete
           toolchain: stable
           override: true
-      - name: Run tests
-        run: cargo test --verbose
-      - name: Run clippy
-        run: cargo clippy --verbose
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
-      - name: Audit
-        run: cargo audit
-    # - name: Tarpaulin Install
-    #   run: cargo install cargo-tarpaulin
-    # - name: tarpaulin coverage
-    #   run: cargo tarpaulin --out Xml
+      # - name: Run tests
+      #   run: cargo test --verbose
+      # - name: Run clippy
+      #   run: cargo clippy --verbose
+      # - name: Install cargo-audit
+      #   run: cargo install cargo-audit
+      # - name: Audit
+      #   run: cargo audit
+      # - name: Tarpaulin Install
+      #   run: cargo install cargo-tarpaulin
+      # - name: tarpaulin coverage
+      #   run: cargo tarpaulin --out Xml
+
