--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -17,16 +17,16 @@ chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0"
 calamine = "0"
 regex = "1.10"
-actix-web = "4.4.0"
-actix-web-actors = "4.2"
-actix-rt = "2.9"
-actix = "0.13.1"
+actix-web = "4"
+actix-web-actors = "4"
+actix-rt = "2"
+actix = "0"
 tokio = "1"
 serde = { version = "1.0", features = ["derive"] } 
 serde_json = "1.0"
-priority-queue = "1.3"
-tracing = { version = "0.1" }
-tracing-subscriber = { version = "0", features = ["json"] }
+priority-queue = "2"
+tracing = "0"
+tracing-subscriber = { version = "0", features = ["json", "env-filter"] }
 tracing-appender = "0.2"
 csv = "1.3"
 lazy_static = "1.4.0" 
