--- a/shared_messages/Cargo.toml
+++ b/shared_messages/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0", features = ["derive"] }
 actix = "0"
 strum = "0"
 strum_macros = "0"
+clap = { version = "4", features = ["derive"] }
