--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -3,9 +3,6 @@ name = "scheduling_system"
 version = "0.1.0"
 edition = "2021"
 
-[profile.release]
-debug = 1
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
@@ -34,3 +31,5 @@ rand = "0.8"
 strum = "0"
 strum_macros = "0"
 tracing-flame = "0.2"
+colored = "2"
+
