debug: schedule method

--- a/imperium/Cargo.toml
+++ b/imperium/Cargo.toml
@@ -12,6 +12,6 @@ url = "2"
 serde_json = "1"
 strum = "0"
 webbrowser = "0"
-reqwest = "0"
+reqwest = { version = "0", features = ["blocking"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0"
