--- a/scheduling_system/docker-compose.override.yml
+++ b/scheduling_system/docker-compose.override.yml
@@ -10,11 +10,11 @@ services:
       - "8001:8001"
     volumes:
       - .:/usr/src/ordinator  # Mount local source for development
-      - log_volume:/usr/src/ordinator/logs  # Keep log volume if you want logs persisted
+      - log_volume:/usr/src/ordinator/logging/logs  # Keep log volume if you want logs persisted
     environment:
       - CONFIG_PATH=/usr/src/ordinator/parameters/work_order_weight_parameters.json
       - CRITERION_PATH=/usr/src/ordinator/benches/benchmark_test.rs
-      - LOG_DIR=/usr/src/ordinator/logs
+      - LOG_DIR=/usr/src/ordinator/logging/logs
     depends_on:
       - elasticsearch
     command: ["cargo", "watch", "--poll", "-w", "src/", "-x", "run -- test_data/export_test.XLSX"]
