--- a/scheduling_system/docker-compose.yml
+++ b/scheduling_system/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     ports:
       - "8001:8001"
     volumes:
-      - log_volume:/usr/src/ordinator/logs
+      - log_volume:/usr/src/ordinator/logging/logs
     environment:
       - CONFIG_PATH=/usr/src/ordinator/parameters/work_order_weight_parameters.json
       - CRITERION_PATH=/usr/src/ordinator/benches/benchmark_test.rs
-      - LOG_DIR=/usr/src/ordinator/logs
+      - LOG_DIR=/usr/src/ordinator/logging/logs
     depends_on:
       - elasticsearch
     command: ["RUST_BACKTRACE=1", "ordinator", "/usr/src/ordinator/test_data/export_test.XLSX"]
