added: percentage counter to strategic and tactical loading

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # will have compiled files and executables
 /target/
 /data/
-/logs/*.log.*
+/logging/logs/*.log.*
 *.folded
 /scheduling_system/data
 /*.svg
