added: multiple assets

--- a/imperium/Cargo.toml
+++ b/imperium/Cargo.toml
@@ -10,8 +10,10 @@ shared_messages = { path = "../shared_messages" }
 clap = { version = "4", features = ["derive"] }
 url = "2"
 serde_json = "1"
+serde = { version = "1", features = ["derive"] }
 strum = "0"
 webbrowser = "0"
 reqwest = { version = "0", features = ["blocking"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0"
+toml = "0.8"
