--- a/imperium/configuration/resources_hd.toml
+++ b/imperium/configuration/resources_hd.toml
@@ -1,35 +1,35 @@
 # Resources are here given in people
-MtnElec = 0.5
-MtnInst = 0.5
-MtnMech = 1.5
-MtnCran = 0.0
-MtnTurb = 0.0
-MtnTele = 1.0
-MtnRous = 2.0
-Medic = 0.0
-MtnLagg = 0.0
-MtnPain = 2.0
-MtnPipf = 2.0
-MtnRigg = 2.0
-MtnRope = 2.0
-MtnSat = 0.0
-MtnScaf = 2.0
-InpSite = 0.0
-Prodlabo = 0.0
-Prodtech = 2.0
-VenAcco = 0.0
-VenComm = 0.0
-VenElec = 0.0
-VenHvac = 0.0
-VenInsp = 0.0
-VenInst = 0.0
-VenMech = 0.0
-VenMete = 0.0
-VenRope = 0.0
-VenScaf = 0.0
-VenSubs = 0.0
-VenCran = 0.0
-QaqcElec = 0.0
-QaqcMech = 0.0
-QaqcPain = 0.0
-WellSupv = 0.0
+mtnelec = 0.5
+mtninst = 0.5
+mtnmech = 1.5
+mtncran = 0.0
+mtnturb = 0.0
+mtntele = 1.0
+mtnrous = 2.0
+medic = 0.0
+mtnlagg = 0.0
+mtnpain = 2.0
+mtnpipf = 2.0
+mtnrigg = 2.0
+mtnrope = 2.0
+mtnsat = 0.0
+mtnscaf = 2.0
+inpsite = 0.0
+prodlabo = 0.0
+prodtech = 2.0
+venacco = 0.0
+vencomm = 0.0
+venelec = 0.0
+venhvac = 0.0
+veninsp = 0.0
+veninst = 0.0
+venmech = 0.0
+venmete = 0.0
+venrope = 0.0
+venscaf = 0.0
+vensubs = 0.0
+vencran = 0.0
+qaqcelec = 0.0
+qaqcmech = 0.0
+qaqcpain = 0.0
+wellsupv = 0.0
