--- a/shared_messages/Cargo.toml
+++ b/shared_messages/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
 actix = "0"
+serde_json = "1"
 strum = "0"
 strum_macros = "0"
 chrono = "0"
+chrono-tz = "0"
+regex = "0"
 clap = { version = "4", features = ["derive"] }
