--- a/shared_messages/Cargo.toml
+++ b/shared_messages/Cargo.toml
@@ -15,3 +15,4 @@ chrono = { version = "0", features = ["serde"] }
 chrono-tz = "0"
 regex = "0"
 clap = { version = "4", features = ["derive"] }
+serde_json_any_key = "2"
