--- a/shared_messages/Cargo.toml
+++ b/shared_messages/Cargo.toml
@@ -11,9 +11,10 @@ actix = "0"
 serde_json = "1"
 strum = "0"
 strum_macros = "0"
-chrono = { version = "0", features = ["serde"] }
+chrono = { version = "0", features = ["serde", "arbitrary"] }
 chrono-tz = "0"
 regex = "0"
 clap = { version = "4", features = ["derive"] }
 serde_json_any_key = "2"
 toml = "0.8"
+proptest = "1"
