--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
       - main
 
 jobs:
-   # Tests are excluded until setup is working correctly 
+   # Tests are excluded until setup is working 
    # build-and-test:
    #   runs-on: ubuntu-latest
 
