--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,28 @@
+name: Deploy to remote server
 on:
   push:
-    branches:
-      - main
-
+  branches:
+    - main
+ 
 jobs:
-   # Tests are excluded until setup is working 
-   # build-and-test:
-   #   runs-on: ubuntu-latest
-
-   #   steps:
-   #   - name: Checkout code
-   #     uses: actions/checkout@v2
-
-   #   - name: Set up Rust
-   #     uses: actions-rs/toolchain@v1
-   #     with:
-   #       toolchain: stable
-
-   #   - name: Build the project
-   #     run: cargo build --release
-
-   #   - name: Run tests
-   #     run: cargo test
-
-  # Remember to test later on
   deploy:
-    runs-on: ubuntu-latest
-    # needs: build-and-test
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Print Environment Variables for Debugging
-      run: |
-        echo "SERVER_HOST: ${{ secrets.SERVER_HOST }}"
-        echo "SERVER_USER: ${{ secrets.SERVER_USER }}"
-    - name: Trigger deployment script on server
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SERVER_HOST: ${{ secrets.SEVER_HOST }}
-        SERVER_USER: ${{ secrets.SERVER_USER }}
-      run: |
-        echo "$SSH_PRIVATE_KEY" > private_key
-        chmod 600 private_key
-        scp -i private_key -o StrictHostKeyChecking=no target/release/your_app $SERVER_USER@$SERVER_HOST:/path/to/your_app
-        ssh -i private_key -o StrictHostKeyChecking=no $SERVER_USER@$SERVER_HOST << 'EOF'
-          cd /path/to/your/project
-          ./deploy.sh
-        EOF
+  runs-on: ubuntu-latest
+  steps:
+  - name: Checkout code
+    uses: actions/checkout@v4
+   
+  - name: Setup SSH Key
+    uses: webfactory/ssh-agent@v0.5.0
+    with:
+    ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+   
+  - name: Deploy code
+    uses: appleboy/ssh-action@master
+    with:
+    host: login1.gbar.dtu.dk
+    username: cbrje
+    key: ${{ secrets.SSH_PRIVATE_KEY }}
+    script: |
+      cd /zhome/6b/5/127255/ordinator
+      git pull origin main
+      zellij -l /zhome/6b/5/127255/ordinator/ordinator.kdl
