--- a/imperium/Cargo.toml
+++ b/imperium/Cargo.toml
@@ -17,3 +17,5 @@ reqwest = { version = "0", features = ["blocking"] }
 tokio = { version = "1", features = ["full"] }
 tracing = "0"
 toml = "0.8"
+clap_complete = "4"
+clap_complete_nushell = "4"
