--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,9 +12,16 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    - name: Setup ssh key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }} | tr -d '\r' > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+      
+    
     - name: Deploy to server
       run: |
-        ssh -i ${{ secrets.SSH_PRIVATE_KEY }} cbrje@login1.gbar.dtu.dk
+        ssh -i ~/.ssh/id_rsa cbrje@login1.gbar.dtu.dk << 'EOF'
           cd /zhome/6b/5/127255/ordinator
           git pull main
           zellij -l ordinator.kdl
