--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,13 @@ jobs:
     - name: Setup ssh key
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/gbar
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -H login1.gbar.dtu.dk >> ~/.ssh/known_hosts      
     
     - name: Deploy to server
       run: |
-        ssh -t -i ~/.ssh/id_rsa cbrje@login1.gbar.dtu.dk << 'EOF'
+        ssh -t -i ~/.ssh/gbar cbrje@login1.gbar.dtu.dk << 'EOF'
           echo "${{ secrets.SECRET_KEY_PASSWORD }}"
           echo "${{ secrets.DTU_PASSWORD }}"
           cd /zhome/6b/5/127255/ordinator
