--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         mkdir -p ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/gbar
-        chmod 600 ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/gbar
         ssh-keyscan -H login1.gbar.dtu.dk >> ~/.ssh/known_hosts      
     
     - name: Deploy to server
