--- a/imperium/configuration/resources_df.toml
+++ b/imperium/configuration/resources_df.toml
@@ -5,6 +5,7 @@
 id = "OP-01-001"
 resources.resources = ["MTN-ELEC" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -12,6 +13,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-01-002"
 resources.resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -19,6 +21,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-01-003"
 resources.resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -26,6 +29,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-01-004"
 resources.resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -36,6 +40,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-02-001"
 resources.resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -43,6 +48,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-02-002"
 resources.resources = [ "MTN-INST" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -53,6 +59,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-02-001"
 resources.resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -60,6 +67,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-02-002"
 resources.resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -67,6 +75,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-02-003"
 resources.resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -74,6 +83,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-02-004"
 resources.resources = [ "MTN-MECH"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -84,6 +94,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-03-001"
 resources.resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -91,6 +102,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-03-002"
 resources.resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -98,6 +110,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-03-003"
 resources.resources = [ "MTN-TURB"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -108,6 +121,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-03-001"
 resources.resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -115,6 +129,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-03-002"
 resources.resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -122,6 +137,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-03-003"
 resources.resources = [ "MTN-TELE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -132,6 +148,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-04-001"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -139,6 +156,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-04-002"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -146,6 +164,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-04-003"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -156,6 +175,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-05-001"
 resources.resources = [ "MEDIC" ]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -166,6 +186,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-05-001"
 resources.resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -173,6 +194,7 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-05-002"
 resources.resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -183,18 +205,21 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-06-001"
 resources.resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-06-002"
 resources.resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-06-003"
 resources.resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -205,24 +230,28 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-07-001"
 resources.resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-07-002"
 resources.resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-07-003"
 resources.resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-07-004"
 resources.resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -233,24 +262,28 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-08-001"
 resources.resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-08-002"
 resources.resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-08-003"
 resources.resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-08-004"
 resources.resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -261,24 +294,28 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-09-001"
 resources.resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-09-002"
 resources.resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-09-003"
 resources.resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-09-004"
 resources.resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -289,18 +326,21 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-10-001"
 resources.resources = [ "INP-SITE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-10-002"
 resources.resources = [ "INP-SITE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-10-003"
 resources.resources = [ "INP-SITE"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
@@ -311,30 +351,35 @@ availability.end_date = 2024-05-30T15:00:00Z
 id = "OP-11-001"
 resources.resources = [ "PRODTECH"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-11-002"
 resources.resources = [ "PRODTECH"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-11-003"
 resources.resources = [ "PRODTECH"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-11-004"
 resources.resources = [ "PRODTECH"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 [[operational]]
 id = "OP-11-005"
 resources.resources = [ "PRODTECH"]
 hours_per_day = 6.0
+shift = "Day"
 availability.start_date = 2024-05-16T07:00:00Z
 availability.end_date = 2024-05-30T15:00:00Z
 
