--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,9 @@ jobs:
     - name: Setup ssh key
       run: |
         mkdir -p ~/.ssh
+        chmod 700 ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/gbar
+
         chmod 600 ~/.ssh/gbar
         ssh-keyscan -H login1.gbar.dtu.dk >> ~/.ssh/known_hosts      
     
