--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,12 @@ jobs:
         mkdir -p ~/.ssh
         chmod 700 ~/.ssh
         echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/gbar
-
         chmod 600 ~/.ssh/gbar
         ssh-keyscan -H login1.gbar.dtu.dk >> ~/.ssh/known_hosts      
     
     - name: Deploy to server
       run: |
-        ssh -t -i ~/.ssh/gbar cbrje@login1.gbar.dtu.dk << 'EOF'
+        ssh -t -v -i ~/.ssh/gbar cbrje@login1.gbar.dtu.dk << 'EOF'
           echo "${{ secrets.SECRET_KEY_PASSWORD }}"
           echo "${{ secrets.DTU_PASSWORD }}"
           cd /zhome/6b/5/127255/ordinator
