--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 ORDINATOR_LOG_DIR=./logging/logs/
+RESOURCE_CONFIG_INITIALIZATION=./imperium/configuration/resources_df.toml
+DATABASE_PATH=temp_scheduling_environment/scheduling_environment.json
