--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -32,10 +32,11 @@ strum = "0"
 strum_macros = "0"
 tracing-flame = "0.2"
 colored = "2"
-dotenv = "0.15"
+dotenvy = "0.15"
 mongodb = "2.8.2"
 serde_json_any_key = "2"
 futures-util = "0"
 bincode = "1"
 futures = "0"
 proptest = "1"
+toml = "0.8.14"
