--- a/shared_messages/Cargo.toml
+++ b/shared_messages/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
+steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 serde = { version = "1", features = ["derive"] }
 actix = "0"
 serde_json = "1"
