Added: SchedulingEnvironmentFactory trait to prepare for different DataSource's Refactor: Extensive change to the README.md

--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -18,6 +18,7 @@ chrono-tz = "0"
 calamine = "0"
 regex = "1.10"
 actix-web = "4"
+thiserror = "1"
 actix-web-actors = "4"
 actix-rt = "2"
 actix = "0"
