--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -12,7 +12,7 @@ criterion = "0.5"
 # steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 # steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
-shared_messages = { path = "../shared_messages" }
+shared_types = { path = "../shared_types" }
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0"
 calamine = "0"
