--- a/imperium/Cargo.toml
+++ b/imperium/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-shared_messages = { path = "../shared_messages" }
+shared_types = { path = "../shared_types" }
 clap = { version = "4", features = ["derive"] }
 url = "2"
 serde_json = "1"
