--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -12,12 +12,13 @@ criterion = "0.5"
 # steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 # steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
-shared_messages = { path = "../shared_messages" }
+shared_types = { path = "../shared_types" }
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0"
 calamine = "0"
 regex = "1.10"
 actix-web = "4"
+thiserror = "1"
 actix-web-actors = "4"
 actix-rt = "2"
 actix = "0"
