--- a/data_processing/Cargo.toml
+++ b/data_processing/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0", features = ["serde", "arbitrary"] }
 shared_types = { path = "../shared_types" }
 rust_decimal = "*"
 polars = "*"
-dotenv = "0"
+dotenv = "*"
+tracing = "*"
