added: TransitionTypes | refactor: Work(U32F32) instead of f64 for work fields

--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -12,6 +12,7 @@ criterion = "0.5"
 # steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 # steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
+fixed = "1.27"
 shared_types = { path = "../shared_types" }
 data_processing = { path = "../data_processing" }
 chrono = { version = "0.4", features = ["serde"] }
