--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -11,6 +11,7 @@ steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master
 steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 serde = { version = "1", features = ["derive"] }
 actix = "0"
+fixed = "1.27"
 serde_json = "1"
 strum = "0"
 strum_macros = "0"
