--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -11,7 +11,8 @@ steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master
 steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 serde = { version = "1", features = ["derive"] }
 actix = "0"
-fixed = "1.27"
+rust_decimal = "1.36"
+rust_decimal_macros = "1.36"
 serde_json = "1"
 strum = "0"
 strum_macros = "0"
