--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-ORDINATOR_PATH=~/projects/ordinator
-ORDINATOR_LOG_DIR=./logging/logs/
-RESOURCE_CONFIG_INITIALIZATION=./imperium/configuration/resources_df.toml
 DATABASE_PATH=temp_scheduling_environment/scheduling_environment.json
-ZK_NOTEBOOK_DIR=~/scino
 ORDINATOR_API_ADDRESS=127.0.0.1:8080
+ORDINATOR_INPUT=dlab_data_extract/dlab_data_extract.xlsx 
+ORDINATOR_LOG_DIR=./logging/logs/
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
+ORDINATOR_PATH=~/projects/ordinator
+OUTPUT_PATH=
+RESOURCE_CONFIG_INITIALIZATION=./imperium/configuration/resources_df.toml
 RUST_BACKTRACE=0
 RUST_LOG=info
-ORDINATOR_INPUT=dlab_data_extract/dlab_data_extract.xlsx 
+ZK_NOTEBOOK_DIR=~/scino
