--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 DATABASE_PATH=temp_scheduling_environment/scheduling_environment.json
+IMPERIUM_PATH=./target/release/imperium
 ORDINATOR_API_ADDRESS=127.0.0.1:8080
 ORDINATOR_INPUT=dlab_data_extract/dlab_data_extract.xlsx 
 ORDINATOR_LOG_DIR=./logging/logs/
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
-ORDINATOR_PATH=~/projects/ordinator
+ORDINATOR_PATH=/home/$USER/projects/ordinator
 OUTPUT_PATH=
 RESOURCE_CONFIG_INITIALIZATION=./imperium/configuration/resources_df.toml
 RUST_BACKTRACE=0
 RUST_LOG=info
-ZK_NOTEBOOK_DIR=~/scino
+ZK_NOTEBOOK_DIR=/home/cbrje/scino
