--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ ORDINATOR_API_ADDRESS=127.0.0.1:8080
 ORDINATOR_INPUT=dlab_data_extract/dlab_data_extract.xlsx 
 ORDINATOR_LOG_DIR=./logging/logs/
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
+ORDINATOR_CORES=2-8
 ORDINATOR_PATH=/home/$USER/projects/ordinator
 OUTPUT_PATH=
 RESOURCE_CONFIG_INITIALIZATION=./imperium/configuration/resources_df.toml
