restructure of the folder structure

--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 DATABASE_PATH=temp_scheduling_environment/scheduling_environment.json
 IMPERIUM_PATH=./target/release/imperium
 ORDINATOR_API_ADDRESS=127.0.0.1:8080
-ORDINATOR_INPUT=dlab_data_extract/dlab_data_extract.xlsx 
+ORDINATOR_INPUT="./data_processing/dlab_data_extract/dlab_data_extract.xlsx" 
 ORDINATOR_LOG_DIR=./logging/logs/
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
 ORDINATOR_CORES=2-8
 ORDINATOR_PATH=/home/$USER/projects/ordinator
 OUTPUT_PATH=
-RESOURCE_CONFIG_INITIALIZATION=./imperium/configuration/resources_df.toml
+RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
 RUST_BACKTRACE=0
 RUST_LOG=info
+WORK_ORDER_WEIGHTINGS=
 ZK_NOTEBOOK_DIR=/home/cbrje/scino
