--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,5 @@
 if has nix; then
-	# dotenv
+	dotenv
 
 	export PATH="$PATH:$ORDINATOR_PATH/target/release/"
 	if ! has nix_direnv_version || ! nix_direnv_version 3.0.5; then
