--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ OUTPUT_PATH=
 RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
 RUST_BACKTRACE=0
 RUST_LOG=info
-WORK_ORDER_WEIGHTINGS=
+WORK_ORDER_WEIGHTINGS=./configuration/work_order_weight_parameters.json
 ZK_NOTEBOOK_DIR=/home/cbrje/scino
