--- a/data_processing/Cargo.toml
+++ b/data_processing/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+atoi = "=1.0.0"
 chrono = { version = "0", features = ["serde", "arbitrary"] }
 shared_types = { path = "../shared_types" }
 rust_decimal = "*"
