--- a/imperium/Cargo.toml
+++ b/imperium/Cargo.toml
@@ -6,17 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+atoi = "=1.0.0"
 shared_types = { path = "../shared_types" }
-clap = { version = "4", features = ["derive"] }
-url = "2"
-serde_json = "1"
-serde = { version = "1", features = ["derive"] }
-strum = "0"
-webbrowser = "0"
-reqwest = { version = "0", features = ["blocking"] }
-tokio = { version = "1", features = ["full"] }
-tracing = "0"
-toml = "0.8"
-clap_complete = "4"
-clap_complete_nushell = "4"
+clap = { version = "*", features = ["derive"] }
+url = "*"
+serde_json = "*"
+serde = { version = "*", features = ["derive"] }
+strum = "*"
+webbrowser = "*"
+reqwest = { version = "*", features = ["blocking"] }
+tokio = { version = "*", features = ["full"] }
+tracing = "*"
+toml = "*"
+clap_complete = "*"
+clap_complete_nushell = "*"
 dotenvy = "*"
