--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -12,36 +12,37 @@ criterion = "0.5"
 # steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 # steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
 # steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
-rust_decimal = "1.36"
+atoi = "=1.0.0"
+rust_decimal = "*"
 shared_types = { path = "../shared_types" }
 data_processing = { path = "../data_processing" }
-chrono = { version = "0.4", features = ["serde"] }
-chrono-tz = "0"
-calamine = "0"
-regex = "1.10"
-actix-web = "4"
-uuid = { version = "1", features = ["v4"] }
-thiserror = "1"
-actix-web-actors = "4"
-actix-rt = "2"
-actix = "0"
-tokio = "1"
-serde = { version = "1", features = ["derive"] } 
-serde_json = "1"
-priority-queue = "2"
-tracing = "0"
-tracing-subscriber = { version = "0", features = ["json", "env-filter"] }
-tracing-appender = "0.2"
-csv = "1.3"
-rand = "0.8"
-strum = "0"
-strum_macros = "0"
-tracing-flame = "0.2"
-colored = "2"
-dotenvy = "0.15"
-serde_json_any_key = "2"
-futures-util = "0"
-bincode = "1"
-futures = "0"
-proptest = "1"
-toml = "0.8.14"
+chrono = { version = "*", features = ["serde"] }
+chrono-tz = "*"
+calamine = "*"
+regex = "*"
+actix-web = "*"
+uuid = { version = "*", features = ["v4"] }
+thiserror = "*"
+actix-web-actors = "*"
+actix-rt = "*"
+actix = "*"
+tokio = "*"
+serde = { version = "*", features = ["derive"] } 
+serde_json = "*"
+priority-queue = "*"
+tracing = "*"
+tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
+tracing-appender = "*"
+csv = "*"
+rand = "*"
+strum = "*"
+strum_macros = "*"
+tracing-flame = "*"
+colored = "*"
+dotenvy = "*"
+serde_json_any_key = "*"
+futures-util = "*"
+bincode = "*"
+futures = "*"
+proptest = "*"
+toml = "*"
