--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_PATH=temp_scheduling_environment/scheduling_environment.json
+DATABASE_PATH=./temp_scheduling_environment/scheduling_environment.json
+EXCEL_DUMP_DIRECTORY=./data_processing/excel_dumps/
 IMPERIUM_PATH=./target/release/imperium
 ORDINATOR_API_ADDRESS=127.0.0.1:8080
 ORDINATOR_INPUT="./data_processing/dlab_data_extract/dlab_data_extract.xlsx" 
