--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -6,20 +6,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-atoi = "=1.0.0"
-tracing = "*"
-serde = { version = "*", features = ["derive"] }
 actix = "*"
-rust_decimal = "*"
-rust_decimal_macros = "*"
-serde_json = "*"
-strum = "*"
-strum_macros = "*"
+atoi = "=1.0.0"
 chrono = { version = "*", features = ["serde", "arbitrary"] }
 chrono-tz = "*"
-regex = "*"
 clap = { version = "*", features = ["derive"] }
-serde_json_any_key = "*"
-toml = "*"
 proptest = "*"
+regex = "*"
+rust_decimal = "*"
+rust_decimal_macros = "*"
+rust_xlsxwriter = "*"
+serde = { version = "*", features = ["derive"] }
+serde_json = "*"
+serde_json_any_key = "*"
+strum = "*"
+strum_macros = "*"
 thiserror = "*"
+toml = "*"
+tracing = "*"
