added: excel dumping

--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix = "*"
+actix-web = "*"
 atoi = "=1.0.0"
 chrono = { version = "*", features = ["serde", "arbitrary"] }
 chrono-tz = "*"
