added: TRACING_LEVEL, PROFILING_LEVEL, and PROFILING_FILE environment variables

--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@ IMPERIUM_PATH=./target/release/imperium
 RUST_BACKTRACE=0
 
 # Logging & Tracing
+PROFILING_FILE="./benches/tracing.folded"
 RUST_LOG=info
 PROFILING_LEVEL=error
 TRACING_LEVEL=info
