97 create separate environment variables for profiling and tracing (#98)
* added: excel dumping

* added: excel dump functionality with strategic and tactical solution

* sync

* sync

* added: TRACING_LEVEL, PROFILING_LEVEL, and PROFILING_FILE environment variables

---------

Co-authored-by: cbrje <chri1423@gmail.com>

--- a/.env
+++ b/.env
@@ -1,15 +1,30 @@
+# Data
 DATABASE_PATH=./temp_scheduling_environment/scheduling_environment.json
 EXCEL_DUMP_DIRECTORY=./data_processing/excel_dumps/
-IMPERIUM_PATH=./target/release/imperium
-ORDINATOR_API_ADDRESS=127.0.0.1:8080
 ORDINATOR_INPUT="./data_processing/dlab_data_extract/dlab_data_extract.xlsx" 
-ORDINATOR_LOG_DIR=./logging/logs/
+
+# Ordinator
+ORDINATOR_API_ADDRESS=127.0.0.1:8080
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
 ORDINATOR_CORES=2-8
 ORDINATOR_PATH=/home/$USER/projects/ordinator
 OUTPUT_PATH=
-RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
+
+# Imperium
+IMPERIUM_PATH=./target/release/imperium
+
+# Debugging
 RUST_BACKTRACE=0
+
+# Logging & Tracing
+PROFILING_FILE="./benches/tracing.folded"
 RUST_LOG=info
+PROFILING_LEVEL=error
+TRACING_LEVEL=info
+ORDINATOR_LOG_DIR=./logging/logs/
+
+# Configuration
 WORK_ORDER_WEIGHTINGS=./configuration/work_order_weight_parameters.json
-ZK_NOTEBOOK_DIR=/home/cbrje/scino
+RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
+
+
