--- a/.env
+++ b/.env
@@ -7,11 +7,12 @@ ORDINATOR_INPUT="./data_processing/dlab_data_extract/dlab_data_extract.xlsx"
 ORDINATOR_API_ADDRESS=127.0.0.1:8080
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
 ORDINATOR_CORES=2-8
-ORDINATOR_PATH=/home/$USER/projects/ordinator
+ORDINATOR_PATH=/home/$USER/ordinator
 OUTPUT_PATH=
 
 # Imperium
 IMPERIUM_PATH=./target/release/imperium
+IMPERIUM_ENDPOINT=127.0.0.1:8080
 
 # Debugging
 RUST_BACKTRACE=0
@@ -27,4 +28,9 @@ ORDINATOR_LOG_DIR=./logging/logs/
 WORK_ORDER_WEIGHTINGS=./configuration/work_order_weight_parameters.json
 RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
 
+# THROTTLING
+STRATEGIC_THROTTLING=0
+TACTICAL_THROTTLING=0
+SUPERVISOR_THROTTLING=0
+OPERATIONAL_THROTTLING=0
 
