--- a/.env
+++ b/.env
@@ -12,7 +12,9 @@ OUTPUT_PATH=
 
 # Imperium
 IMPERIUM_PATH=./target/release/imperium
-IMPERIUM_ENDPOINT=127.0.0.1:8080
+
+# For HOSTING on other than local environments this should be a different value
+IMPERIUM_TO_ORDINATOR_ADDRESS=127.0.0.1:8080
 
 # Debugging
 RUST_BACKTRACE=0
