99 create the supervisor optimization loop (#100)
* updated .env file

* Created throttling environment variables

* sync

* added: created <SupervisorAgent as LargeNeighborHoodSearch>::schedule()

* added: remove delegate drop after the supervisor agent assigns them

* sync

* sync

* updated: documentation for README and the Imperium cli

* sync

---------

Co-authored-by: cbrje <chri1423@gmail.com>

--- a/.env
+++ b/.env
@@ -7,11 +7,14 @@ ORDINATOR_INPUT="./data_processing/dlab_data_extract/dlab_data_extract.xlsx"
 ORDINATOR_API_ADDRESS=127.0.0.1:8080
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
 ORDINATOR_CORES=2-8
-ORDINATOR_PATH=/home/$USER/projects/ordinator
+ORDINATOR_PATH=/home/$USER/ordinator
 OUTPUT_PATH=
 
 # Imperium
 IMPERIUM_PATH=./target/release/imperium
+
+# For HOSTING on other than local environments this should be a different value
+IMPERIUM_TO_ORDINATOR_ADDRESS=127.0.0.1:8080
 
 # Debugging
 RUST_BACKTRACE=0
@@ -27,4 +30,9 @@ ORDINATOR_LOG_DIR=./logging/logs/
 WORK_ORDER_WEIGHTINGS=./configuration/work_order_weight_parameters.json
 RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
 
+# THROTTLING
+STRATEGIC_THROTTLING=0
+TACTICAL_THROTTLING=0
+SUPERVISOR_THROTTLING=100
+OPERATIONAL_THROTTLING=150
 
