--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 **.csv
 **.xlsx
 **.xlsx#
+**.tar*
+
 # Output of the scheduling_system
 /output/*.xlsx
 /output/*.xlsx#
@@ -31,4 +33,6 @@ core*
 .vscode/
 
 # direnv
-.direnv
+.direnv/
+
+
