additional progress on the csv parsing

--- a/data_processing/Cargo.toml
+++ b/data_processing/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 atoi = "=1.0.0"
 calamine = "*"
 chrono = { version = "0", features = ["serde", "arbitrary"] }
+chrono-tz = "0.10.0"
 csv = "*"
 dotenvy = "*"
 polars = "*"
