--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Data
+
 DATABASE_PATH=./temp_scheduling_environment/scheduling_environment.json
 EXCEL_DUMP_DIRECTORY=./data_processing/excel_dumps/
-ORDINATOR_INPUT="./data_processing/dlab_data_extract/dlab_data_extract.xlsx" 
+ORDINATOR_INPUT=./configuration/baptiste_data_locations.toml 
 
 # Ordinator
 ORDINATOR_API_ADDRESS=127.0.0.1:8090
