105 102 initialize ordinator based on baptiste partially merged sap data (#108)
* added: Merge Logic

* additional progress on the csv parsing

* additional progress on the csv parsing

* sync

* additional progress on the csv parsing

* sync

* additional progress on the csv parse

* added: additional progress on the SAP connection

* added: SAP csv data inputting

---------

Co-authored-by: cbrje <chri1423@gmail.com>

--- a/data_processing/Cargo.toml
+++ b/data_processing/Cargo.toml
@@ -9,13 +9,16 @@ edition = "2021"
 atoi = "=1.0.0"
 calamine = "*"
 chrono = { version = "0", features = ["serde", "arbitrary"] }
+chrono-tz = "0.10.0"
 csv = "*"
 dotenvy = "*"
 polars = "*"
+rayon = "*"
 regex = "*"
 rust_decimal = "*"
 rust_xlsxwriter = "*"
 serde = { version = "*", features = [ "derive" ]}
 shared_types = { path = "../shared_types" }
 thiserror = "*"
+toml = "*"
 tracing = "*"
