105 102 initialize ordinator based on baptiste partially merged sap data (#108)
* added: Merge Logic

* additional progress on the csv parsing

* additional progress on the csv parsing

* sync

* additional progress on the csv parsing

* sync

* additional progress on the csv parse

* added: additional progress on the SAP connection

* added: SAP csv data inputting

---------

Co-authored-by: cbrje <chri1423@gmail.com>

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Data
-DATABASE_PATH=./temp_scheduling_environment/scheduling_environment.json
+
+DATABASE_PATH=./temp_scheduling_environment_database/scheduling_environment.json
 EXCEL_DUMP_DIRECTORY=./data_processing/excel_dumps/
-ORDINATOR_INPUT="./data_processing/dlab_data_extract/dlab_data_extract.xlsx" 
+ORDINATOR_INPUT=./configuration/baptiste_data_locations.toml 
 
 # Ordinator
 ORDINATOR_API_ADDRESS=127.0.0.1:8090
@@ -17,7 +18,7 @@ IMPERIUM_PATH=./target/release/imperium
 IMPERIUM_TO_ORDINATOR_ADDRESS=127.0.0.1:8090
 
 # Debugging
-RUST_BACKTRACE=0
+RUST_BACKTRACE=1
 
 # Logging & Tracing
 PROFILING_FILE="./benches/tracing.folded"
