update: correctly split ports between imperium and ordinator

--- a/.env
+++ b/.env
@@ -11,11 +11,9 @@ ORDINATOR_CORES=2-8
 ORDINATOR_PATH=/home/$USER/ordinator
 OUTPUT_PATH=
 
-# Imperium
+# Imperium (CHANGE THIS DEPENDING ON WHERE IMPERIUM IS LOCATED)
+IMPERIUM_ADDRESS=127.0.0.1:8090
 IMPERIUM_PATH=./target/release/imperium
-
-# For HOSTING on other than local environments this should be a different value
-IMPERIUM_TO_ORDINATOR_ADDRESS=127.0.0.1:8090
 
 # Debugging
 RUST_BACKTRACE=1
