added: ASSET environment variable

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ STRATEGIC_THROTTLING=0
 TACTICAL_THROTTLING=0
 SUPERVISOR_THROTTLING=100
 OPERATIONAL_THROTTLING=150
+# CHOOSE Asset
+ASSET=DF
 
 # Ordinator
 ORDINATOR_API_ADDRESS=127.0.0.1:8090
