--- a/configuration/resources_te.toml
+++ b/configuration/resources_te.toml
@@ -1,3 +1,8 @@
+[[supervisors]]
+id = "supervisor-general"
+
+# [[supervisors]]
+# id = "supervisor-second"
 ################################
 ###          MTN-ELEC        ###
 ################################
